crates/schema/tests/compile_fail/valid_values_no_public_ctor.stderr
error[E0599]: no associated function or constant named `new` found for struct `ValidValues` in the current scope
 --> tests/compile_fail/valid_values_no_public_ctor.rs:4:41
  |
4 |     let _ = nebula_schema::ValidValues::new();
  |                                         ^^^ associated function or constant not found in `ValidValues`
